--- a/src/paraphrase/App.scss
+++ b/src/paraphrase/App.scss
@@ -156,8 +156,7 @@ i.bi {
     }
 }
 
-.paraphrase {
-    textarea {
-        font-size: 1.4rem;
-    }
+.app {
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
