--- a/src/utterances5/components/example/Example.scss
+++ b/src/utterances5/components/example/Example.scss
@@ -13,6 +13,11 @@
         }
     }
 
+    .examples-header {
+        margin-bottom: 18px;
+        margin-left: 9px;
+    }
+
     .card {
         min-width: 300px;
         min-height: 280px;
