--- a/src/utterances5/containers/complex/Complex.scss
+++ b/src/utterances5/containers/complex/Complex.scss
@@ -1,3 +1,12 @@
 .complex {
-    
+    .flow {
+        padding: 2px 4px;
+        margin-left: 8px;
+        margin-right: 2px;
+        border-radius: 8px;
+        border: 2px solid #1d3557;
+        background: #1d3557;
+        color: #f1faee;
+        cursor: pointer;
+    }
 }
