phase-d.1.2 and build

--- a/src/rephrase/components/command/Command.scss
+++ b/src/rephrase/components/command/Command.scss
@@ -40,4 +40,9 @@
         line-height: 2.5rem;
         padding: 30px;
     }
+
+    .examples-container {
+        margin-top: 10vh;
+        margin-bottom: 10vh;
+    }
 }
