--- a/src/rephrase/components/help/Help.scss
+++ b/src/rephrase/components/help/Help.scss
@@ -10,4 +10,9 @@
     .instruction-examples {
         width: 600px;
     }
+
+    .examples {
+        margin-top: 25px;
+        margin-bottom: 40px;
+    }
 }
