--- a/src/rephrase/containers/home/Home.scss
+++ b/src/rephrase/containers/home/Home.scss
@@ -1,8 +1,4 @@
 .home {
-    height: 70vh;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
-
     .header {
         margin-bottom: 20px;
 
@@ -44,7 +40,7 @@
     }
 
     .intent {
-        font-family: "Times New Roman", Times, serif;
+        font-family: 'Times New Roman', Times, serif;
         font-style: italic;
         font-size: 1.8rem;
         line-height: 2.8rem;
@@ -67,7 +63,7 @@
     }
 
     .intent-textarea {
-        font-family: "Times New Roman", Times, serif;
+        font-family: 'Times New Roman', Times, serif;
         font-style: italic;
         font-size: 1.8rem;
         line-height: 2.5rem;
