--- a/src/rephrase/App.scss
+++ b/src/rephrase/App.scss
@@ -305,6 +305,10 @@ h6 {
 }
 
 .page {
+    min-height: 70vh;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+
     .header {
         margin-bottom: 20px;
 
@@ -321,6 +325,7 @@ h6 {
 
         p {
             font-size: 1.75rem;
+            line-height: 2.9rem;
             width: 60%;
             margin-left: auto;
             margin-right: auto;
