--- a/src/rephrase/containers/utterance/Utterance.scss
+++ b/src/rephrase/containers/utterance/Utterance.scss
@@ -41,7 +41,7 @@
     }
 
     .flows {
-        margin-bottom: 20px;
+        margin-bottom: 40px;
 
         .flow {
             font-size: 1rem;
@@ -72,6 +72,18 @@
         }
     }
 
+    .excluded-apps {
+        margin-bottom: 40px;
+        // width: 75%;
+
+        .app-box {
+            .app-icon {
+                background: #c1121f;
+                color: #f1faee;
+            }
+        }
+    }
+
     .rephrase-utterances {
         margin-bottom: 30px;
 
@@ -96,10 +108,6 @@
         .carousel {
             margin-bottom: 10px;
         }
-    }
-
-    .flows {
-        margin-bottom: 20px;
     }
 
     .utterance-input {
